GTK3 ContrastHigh: fix width of progressbar, broken in gtk+-3.14

--- a/desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
@@ -544,6 +544,13 @@ GtkComboBox .button {
     background-color: @theme_insensitive_bg;
 }
 
+GtkProgressBar {
+	/* FIXME - Not working 3.14 */
+	-GtkProgressBar-min-horizontal-bar-height: 16;
+	-GtkProgressBar-min-vertical-bar-width: 16;
+	border-radius: 6px;
+}
+
 .progressbar {
     background-color: @theme_highlight_color;
     border-width: 1px;
